why choose us section completed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     </meta>
     <link rel="shorcut icon" href="./icons/favicon.png">
-    <title>ZAP | Creative Studio from London, UK </title>
+    <title>FELIPE's | ../portfolio/zap/ </title>
     <link rel="stylesheet" href="reset_all.css">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
@@ -202,21 +202,299 @@
                         </a>
                     </div>
 
+                </article>
+
             </div>
 
-            </article>
+        </section>
+
+
+        <!-- OUR WORKS -->
+        <section id="ourWorks" class="ourWorks">
+
+            <div class="content">
+                <div class="titleSection">
+                    <div>
+                        <h4>
+                            our workS
+                        </h4>
+                    </div>
+                    <div class="imgHammers">
+                        <img src="./icons/hammers.png" alt="image-hammers">
+                    </div>
+                    <div>
+                        <h5>
+                            show how amazing your work is
+                        </h5>
+                    </div>
+                </div>
+
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="" class="button">
+                                <h6>branding design</h6>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="" class="button">
+                                <h6>photography</h6>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="" class="button">
+                                <h6>web design</h6>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="" class="button">
+                                <h6>digital art</h6>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="" class="button">
+                                <h6>+</h6>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+
+            </div>
+
+            <div class="picsContainer">
+
+                <div class="pics">
+                    <img src="./images/work1.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>branding design</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pics ">
+                    <img src="./images/work2.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>photography</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pics ">
+                    <img src="./images/work3.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>web design</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pics ">
+                    <img src="./images/work4.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>digital art</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pics ">
+                    <img src="./images/work5.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>photography</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pics ">
+                    <img src="./images/work6.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>web design</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pics ">
+                    <img src="./images/work7.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>digital art</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pics ">
+                    <img src="./images/work8.jpg" alt="">
+                    <div class="overlay">
+                        <div class="text">
+                            <h5>branding design</h5>
+
+                            <h4>crossfit open workout</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- WHY CHOOSE US ? -->
+        <section id="whyChooseUs" class="whyChooseUs">
+
+            <div class="content">
+
+                <div class="titleSection">
+
+                    <h4>
+                        why choose us
+                    </h4>
+
+
+                    <div class="imgHammers">
+                        <img src="./icons/hammers.png" alt="image-hammers">
+                    </div>
+
+                    <h5>
+                        it is our mission to build amazing websites
+                    </h5>
+
+                </div>
+
+                <div class="explanation">
+
+                    <article>
+
+                        <h5 class="section">
+                            we deliver high quality services
+                        </h5>
+
+                        <h4 class="section">
+                            ultra services & the best support
+                        </h4>
+
+                        <p class="section">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic inventore adipisci aperiam
+                            ipsum voluptatibus impedit eaque quod repellendus quo, laborum dolores et reprehenderit,
+                            veritatis quia a accusamus laboriosam debitis vero. Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit uia a accusamus.
+                        </p>
+
+
+                        <div>
+                            <h4 class="footer">
+                                <strong>john doe
+                                    - <em>ceo/founder zap</em></strong>
+                            </h4>
+
+                        </div>
+                    </article>
+
+                    <aside>
+                    </aside>
+                </div>
+
+                <div class="services">
+
+                    <div class="items">
+                        <img class="icon" src="./icons/paperPlane.png" alt=" icon-paper-plane">
+
+                        <div class="items_text">
+                            <h4>trending</h4>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit voluptas maiore.</p>
+                        </div>
+                    </div>
+
+                    <div class="items">
+                        <img class="icon" src="./icons/satelliteDish.png" alt="icon-paper-plane">
+
+                        <div class="items_text">
+                            <h4>smart setting</h4>
+
+                            <p>Sit amet consectetur adipisicing elit voluptas cumque tempore cum, assumenda quam
+                                ipsam
+                                .</p>
+                        </div>
+                    </div>
+
+                    <div class="items">
+                        <img class="icon" src="./icons/sliderH.png" alt="icon-paper-plane">
+
+                        <div class="items_text">
+                            <h4>powerful admin</h4>
+
+                            <p>Contrary to popular belief, lorem ipsum is not simply random text. it has roots in a
+                                piece.</p>
+                        </div>
+                    </div>
+
+                    <div class="items">
+                        <img class="icon" src="./icons/moon.png" alt="icon-moon">
+
+                        <div class="items_text">
+                            <h4>sleeping mode</h4>
+
+                            <p>Contrary to popular belief, lorem ipsum is not simply random text. it has roots in a
+                                piece.</p>
+                        </div>
+                    </div>
+                    <div class="items">
+                        <img class="icon" src="./icons/heart.png" alt="icon-paper-plane">
+
+                        <div class="items_text">
+                            <h4>user friendly</h4>
+
+                            <p>Contrary to popular belief, lorem ipsum is not simply random text. it has roots in a
+                                piece.</p>
+                        </div>
+                    </div>
+                    <div class="items">
+                        <img class="icon" src="./icons/hdd.png" alt="icon-paper-plane">
+
+                        <div class="items_text">
+                            <h4>auto backup</h4>
+
+                            <p>Contrary to popular belief, lorem ipsum is not simply random text. it has roots in a
+                                piece.</p>
+                        </div>
+                    </div>
+                    <!-- </div> -->
+                </div>
+            </div>
+        </section>
+
+        <!-- add real content above this line -->
 
     </div>
 
-    </section>
 
-    </div>
 
+    <!-- add fake and test content under  this line -->
 
     <div class=" section refe">
         <h1>hola mundo !h1</h1>
         <h2>hola mundo !h2</h2>
-        <h3>hola mundo !h3</h3>
+        <h3>Style pending to be define, STYLE PENDING TO BE DEFINE !h3</h3>
         <h4>hola mundo !h4</h4>
         <h5>hola mundo !h5</h5>
         <h6>hola mundo !h6</h6>
