stads section completed

--- a/index.html
+++ b/index.html
@@ -414,7 +414,6 @@
                 </div>
 
                 <div class="services">
-
                     <div class="items">
                         <img class="icon" src="./icons/paperPlane.png" alt=" icon-paper-plane">
 
@@ -424,7 +423,6 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit voluptas maiore.</p>
                         </div>
                     </div>
-
                     <div class="items">
                         <img class="icon" src="./icons/satelliteDish.png" alt="icon-paper-plane">
 
@@ -436,7 +434,6 @@
                                 .</p>
                         </div>
                     </div>
-
                     <div class="items">
                         <img class="icon" src="./icons/sliderH.png" alt="icon-paper-plane">
 
@@ -447,7 +444,6 @@
                                 piece.</p>
                         </div>
                     </div>
-
                     <div class="items">
                         <img class="icon" src="./icons/moon.png" alt="icon-moon">
 
@@ -478,10 +474,39 @@
                                 piece.</p>
                         </div>
                     </div>
-                    <!-- </div> -->
                 </div>
             </div>
         </section>
+
+
+        <!-- STADISTICS -->
+        <div class="stads">
+
+            <div class="content">
+
+                <div class="stad_item">
+                    <h4>35</h4>
+                    <h5>team members</h5>
+                </div>
+
+                <div class="stad_item">
+                    <h4>5225</h4>
+                    <h5>lines of code</h5>
+                </div>
+
+                <div class="stad_item">
+                    <h4>4977</h4>
+                    <h5>satisfied clients</h5>
+                </div>
+
+                <div class="stad_item">
+                    <h4>178</h4>
+                    <h5>PSD files included</h5>
+                </div>
+
+            </div>
+
+        </div>
 
         <!-- add real content above this line -->
 
