--- a/index.html
+++ b/index.html
@@ -508,6 +508,95 @@
 
         </div>
 
+        <!-- MEET OUR TEAM -->
+        <section id="team" class="meet">
+
+            <div class="content">
+
+
+                <div class="titleSection">
+                    <div>
+                        <h4>meet our team</h4>
+                    </div>
+                    <div class="imgHammers">
+                        <img src="./icons/hammers.png" alt="image-hammers">
+                    </div>
+                    <div>
+                        <h5>We are the ones who support you</h5>
+                    </div>
+                </div>
+
+                <div class="meet_content">
+
+                    <div class="team">
+
+                        <div class="team_pic">
+
+                            <img src="./images/team1.png" alt="image-our-team-1a">
+
+                            <div class="team_pic_text">
+                                <h4>john snow</h4>
+                                <h6>
+                                    <strong>ceo/co-founder</strong>
+                                </h6>
+                            </div>
+                        </div>
+
+                        <div class="team_pic">
+                            <img src="./images/team2.png" alt="image-our-team-1b">
+                            <div class="team_pic_text">
+                                <h4>tyrion lannister</h4>
+                                <h6>art director/co-founder</h6>
+                            </div>
+                        </div>
+
+                        <div class="team_pic">
+                            <img src="./images/team3.png" alt="image-our-team-1c">
+                            <div class="team_pic_text">
+                                <h4>sansa stark</h4>
+                                <h6>product manager/co-founder</h6>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                    <div class="extras">
+                        <article>
+
+                            <h4>
+                                are you missing out ?
+                            </h4>
+
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic inventore adipisci aperiam
+                                ipsum
+                                voluptatibus
+                                impedit eaque quod repellendus quo, laborum dolores et reprehenderit, veritatis quia a
+                                accusamus
+                                laboriosam
+                                debitis vero. Lorem ipsum dolor sit
+                                amet consectetur adipisicing elit uia a accusamus.
+                            </p>
+
+                        </article>
+
+                        <aside>
+
+                            <div>
+                                <a href="" class="button">
+                                    <h6> join us</h6>
+                                </a>
+                            </div>
+
+                        </aside>
+
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <!-- add real content above this line -->
 
     </div>
