clients section completed

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <title>FELIPE's | ../portfolio/zap/ </title>
     <link rel="stylesheet" href="reset_all.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js"></script> 
 
 </head>
 
 <body>
-
-
 
     <header>
 
@@ -120,7 +118,7 @@
             </div>
 
             <div class="headerSection ">
-                <a class="enter clickable" onclick="enter_alert()">
+                <a class="enter clickable" onclick="enterAlert()">
                     <h5>Enter</h5>
                 </a>
             </div>
@@ -207,7 +205,6 @@
             </div>
 
         </section>
-
 
         <!-- OUR WORKS -->
         <section id="ourWorks" class="ourWorks">
@@ -478,7 +475,6 @@
             </div>
         </section>
 
-
         <!-- STADISTICS -->
         <div class="stads">
 
@@ -512,7 +508,6 @@
         <section id="team" class="meet">
 
             <div class="content">
-
 
                 <div class="titleSection">
                     <div>
@@ -597,6 +592,68 @@
 
         </section>
 
+         <!-- CLIENTS -->
+         <section id="clients" class="clients">
+
+            <div class="content">
+                
+                <div class="titleSection">
+                    <div>
+                        <h4>What do our clients say ?</h4>
+                    </div>
+                    <div class="imgHammers">
+                        <img src="./icons/hammers.png" alt="image-hammers">
+                    </div>
+                    <div>
+                         <h5>Well done Jobs, Happy clients !</h5>
+                    </div>
+                </div>
+
+                <!-- <div class="clientC_content"> -->
+                <div class="clientContent">
+
+                    <div class="picsContainer">
+
+                        <div id="clientPic1" class="picClient client1 clickable" onmouseover="client1()"></div>
+
+                        <div id="clientPic2" class="picClient client2 clickable" onmouseover="client2()"></div>
+
+                        <div id="clientPic3" class="picClient client3 clickable" onmouseover="client3()"></div>
+
+                    </div>
+
+                    <div class="clientComment">
+                        <h5 id="clientComment">
+                            Never forget what you are, the rest of the world will not. Wear it like armor and it can
+                            never be used to hurt you.
+                        </h5>
+                    </div>
+
+                    <div class="triangleDeco">
+                        <img id="clientsTriangle" src="./images/triangle.png" alt="image-triangle">
+                    </div>
+
+                    <div class="clientId">
+                        <h4 id="clientName">tyrion lannister</h4>
+                        <h5 id="clientTitle">lord of casterly rock</h5>
+                    </div>
+
+                    <div id="clientCircle1" class="circleDeco clickable " onmouseover="client1()">
+                    </div>
+                    <div id="clientCircle2" class="circleDeco clickable  tostao_background" onmouseover="client2()">
+                    </div>
+                    <div id="clientCircle3" class="circleDeco clickable" onmouseover="client3()"></div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+        <section>
+            <h1>WORK IN PROGRESS...</h1>
+        </section>
+        
         <!-- add real content above this line -->
 
     </div>
@@ -604,7 +661,7 @@
 
 
     <!-- add fake and test content under  this line -->
-
+<!-- 
     <div class=" section refe">
         <h1>hola mundo !h1</h1>
         <h2>hola mundo !h2</h2>
@@ -612,7 +669,7 @@
         <h4>hola mundo !h4</h4>
         <h5>hola mundo !h5</h5>
         <h6>hola mundo !h6</h6>
-    </div>
+    </div> -->
 
 
 </body>
