quote section completed

--- a/index.html
+++ b/index.html
@@ -640,15 +640,42 @@
 
                     <div id="clientCircle1" class="circleDeco clickable " onmouseover="client1()">
                     </div>
-                    <div id="clientCircle2" class="circleDeco clickable  tostao_background" onmouseover="client2()">
+
+                    <div id="clientCircle2" class="circleDeco clickable tostaoBackground" onmouseover="client2()">
                     </div>
-                    <div id="clientCircle3" class="circleDeco clickable" onmouseover="client3()"></div>
+
+                    <div id="clientCircle3" class="circleDeco clickable" onmouseover="client3()">
+                    </div>
 
                 </div>
 
             </div>
 
         </section>
+
+           <!-- GET A QUOTE -->
+
+           <div id="quote" class="quote">
+            <div class="quote">
+
+                <div class="content">
+                    <h5>
+                        Looking for <span class="tostaoColor">
+                            <strong>
+                                quality and affordability 
+                            </strong>
+                        </span> for your next project
+                        ?
+                    </h5>
+
+                    <a class="button2" href="#pricing">
+                        <h4>get a quote</h4>
+                    </a>
+
+                </div>
+
+            </div>
+        </div>
 
         <section>
             <h1>WORK IN PROGRESS...</h1>
