blog section completed

--- a/index.html
+++ b/index.html
@@ -654,8 +654,7 @@
         </section>
 
            <!-- GET A QUOTE -->
-
-           <div id="quote" class="quote">
+        <div id="quote" class="quote">
             <div class="quote">
 
                 <div class="content">
@@ -676,6 +675,162 @@
 
             </div>
         </div>
+        
+        <!-- BLOG -->
+        <section id="blog" class="blog">
+
+            <div class="content">
+                   
+                <div class="titleSection">
+                    <div>
+                        <h4>blog</h4>
+                    </div>
+                    <div class="imgHammers">
+                        <img src="./icons/hammers.png" alt="image-hammers">
+                    </div>
+                    <div>
+                         <h5>let's tell your story</h5>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="picsContainer">
+
+                <div class="row odd">
+
+                    <div class="pics">
+                        <img src="./images/blog1.jpg" alt="">
+                    </div>
+
+                    <div class="text">
+
+                        <div class="right_triangle_deco"></div>
+                        <!-- <div class="up_triangle_deco"></div> -->
+
+                        <div class="textContent">
+                            <h5>brading design</h5>
+
+                            <h4>leeds juicery</h4>
+
+                            <p>
+                                lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur doloribus
+                                delectus
+                                officia.
+                            </p>
+
+                            <a href="">
+                                <h4>
+                                    read more
+                                    <span class="tostaoColor arrow_size">
+                                        ➞
+                                    </span>
+                                </h4>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="pics ">
+                        <img src="./images/blog2.jpg" alt="">
+
+                    </div>
+
+                    <div class="text ">
+                        <div class="right_triangle_deco"></div>
+                        <!-- <div class="up_triangle_deco"></div> -->
+
+
+                        <div class="textContent">
+                            <h5>motion graphics</h5>
+
+                            <h4>hello itaewon project</h4>
+
+                            <p>
+                                lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur doloribus
+                                delectus
+                                officia.
+                            </p>
+
+                            <a href="">
+                                <h4>
+                                    read more
+                                    <span class="tostaoColor arrow_size">
+                                        ➞
+                                    </span>
+                                </h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row even">
+
+                    <div class="pics ">
+                        <img src="./images/blog3.jpg" alt="">
+                    </div>
+
+
+                    <div class="text ">
+                        <div class="left_triangle_deco"></div>
+                        <!-- <div class="up_triangle_deco"></div> -->
+
+                        <div class="textContent">
+                            <h5>seasonal lookbook</h5>
+
+                            <h4>brooklyn</h4>
+
+                            <p>
+                                lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur doloribus
+                                delectus
+                                officia.
+                            </p>
+
+                            <a href="">
+                                <h4>
+                                    read more
+                                    <span class="tostaoColor arrow_size">
+                                        ➞
+                                    </span>
+                                </h4>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="pics ">
+                        <img src="./images/blog4.jpg" alt="">
+                    </div>
+
+                    <div class="text ">
+                        <div class="left_triangle_deco"></div>
+                        <!-- <div class="up_triangle_deco"></div> -->
+
+                        <div class="textContent">
+                            <h5>photography</h5>
+
+                            <h4>maxi dress</h4>
+
+                            <p>
+                                lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt tenetur doloribus
+                                delectus
+                                officia.
+                            </p>
+
+                            <a href="">
+                                <h4>
+                                    read more
+                                    <span class="tostaoColor arrow_size">
+                                        ➞
+                                    </span>
+                                </h4>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
 
         <section>
             <h1>WORK IN PROGRESS...</h1>
